--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <title>Guess My Number</title>
 </head>
 <body>
-<header>
-  <h1>Guess My Number</h1>
+  <h1>Guess The Number</h1>
   <h3>How to play?</h3>
-  <p>We will selected a random number between 1 and 100. <br>
-    You will get 10 turns to guess it right. <br>
-    And we will tell you after every guess that if your guess was high or low. <br>
-    Best For Luck!</p>
-</header>
+  <p>
+      We will selected a random number between 1 and 100. <br>
+      You will get 10 turns to guess it right. <br>
+      And we will tell you after every guess that 
+      if your guess was high or low. <br>
+      Best For Luck! <br>
+  </p>
 
   <button type="button" id="start" class="start-btn" onclick="start()">Start</button>
   <button type="button" id="reset" class="reset-btn" onclick="window.location.reload()">Reload</button>
 
   <div id="main-div" class="main-div">
-    Enter the guess -> <input type="text" id="guess-box" class="guess-box">
-    <button type="button" id="check" class="check-btn" onclick="checkGuess()">Check</button>
+      Enter the guess -> <input type="text" id="guess-box" class="guess-box">
+      <button type="button" id="check" class="check-btn" onclick="checkGuess()">Check</button>
 
-
-    <div id="all-guesses">Your Guess:</div>
-    <div id="high-orlow" class=""></div>
+      <div id="all-guesses">Your Guess: </div>
+      <div id="high-or-low" class=""></div>
   </div>
 
 
