html and css modified

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Guess My Number</title>
 </head>
 <body>
+  <header>
   <h1>Guess The Number</h1>
   <h3>How to play?</h3>
   <p>
@@ -15,7 +16,7 @@
       You will get 10 turns to guess it right. <br>
       And we will tell you after every guess that 
       if your guess was high or low. <br>
-      Best For Luck! <br>
+      <span>Best For Luck!</span>  <br>
   </p>
 
   <button type="button" id="start" class="start-btn" onclick="start()">Start</button>
@@ -28,6 +29,7 @@
       <div id="all-guesses">Your Guess: </div>
       <div id="high-or-low" class=""></div>
   </div>
+</header>
 
 
 
