--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button type="button" id="reset" class="reset-btn" onclick="window.location.reload()">Reload</button>
 
   <div id="main-div" class="main-div">
-      Enter the guess -> <input type="text" id="guess-box" class="guess-box">
+    <span> Enter the guess -></span> <input type="text" id="guess-box" class="guess-box">
       <button type="button" id="check" class="check-btn" onclick="checkGuess()">Check</button>
 
       <div id="all-guesses">Your Guess: </div>
